force-app/main/default/objects/Standard_Onboarding_Step__mdt/Standard_Onboarding_Step__mdt.object-meta.xml
<CustomObject>
    <description>Admin-managed standard merchant onboarding step definitions.</description>
    <label>Standard Onboarding Step</label>
    <pluralLabel>Standard Onboarding Steps</pluralLabel>
</CustomObject>