force-app/main/default/objects/Standard_Onboarding_Step__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this standard step should be available for new Account onboarding.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>