force-app/main/default/objects/Standard_Onboarding_Step__mdt/fields/Step_Label__c.field-meta.xml
<CustomField>
    <fullName>Step_Label__c</fullName>
    <description>Display label used when creating Account onboarding steps.</description>
    <label>Step Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>